# flagdash-cli

./: Cargo.toml  README.md
src/: action.rs  app.rs  config.rs  event.rs  main.rs  theme.rs  tui.rs
src/api/: client.rs  error.rs  types.rs
src/components/: confirm_dialog.rs  environment_switcher.rs  header.rs  input_field.rs  mod.rs  search_bar.rs  sidebar.rs  status_bar.rs  table_view.rs  text_area.rs  toast.rs
src/views/: dashboard.rs  login.rs  mod.rs  project_picker.rs
src/views/ai_configs/: detail.rs  form.rs  list.rs
src/views/configs/: detail.rs  form.rs  list.rs  mod.rs  value_editor.rs
src/views/environments/: list.rs
src/views/flags/: detail.rs  form.rs  list.rs  mod.rs  rollout.rs  rules.rs  schedules.rs  toggle.rs  variations.rs
src/views/webhooks/: detail.rs  form.rs  list.rs  mod.rs
