[package]
name = "flagdash-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FlagDash TUI — Interactive terminal UI for feature flag management"
repository = "https://github.com/flagdash/flagdash-cli"
homepage = "https://flagdash.io"
keywords = ["feature-flags", "tui", "cli", "flagdash"]

[[bin]]
name = "flagdash"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
open = "5"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
